Greece - user UK - same sex
Updated content to reflect changes from 18 to 6 outcomes.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/_same_sex.govspeak.erb
@@ -1,7 +1,9 @@
-Contact the [Embassy of Greece](https://www.gov.uk/government/publications/foreign-embassies-in-the-uk) or the relevant authorities in Greece (town hall or local Greek [notary public](http://www.notaries-directory.eu/)) to find out about local marriage laws, including what documents you’ll need.
+You can have a same-sex civil partnership in Greece.
 
-^You should get [legal advice](https://www.gov.uk/government/collections/list-of-lawyers) and check the [travel advice for Greece](https://www.gov.uk/foreign-travel-advice/greece) before making any plans.^
+##Register your civil partnership
 
-##Naturalisation of your partner if they move to the UK
+Your civil partnership can only be registered in a register office.
 
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+Contact the local town hall (‘dímos’) where you want to get married or a local Greek [notary public](http://www.notaries-directory.eu/) to find out about local partnership laws, including what documents you’ll need. A notary public will charge a fee.
+
+^ Check the [travel advice for Greece](/foreign-travel-advice/greece). You should also get [legal advice](/government/collections/list-of-lawyers) before making any plans and to check that your Greek civil partnership will be valid in the UK. ^
