Content update for opposite and same sex
This commit updates the opposite and same sex outcomes for Luxembourg

The update has been carry out based on instructions received from
the content design team.

The outcome paths affected by these changes are:

- /marriage-abroad/y/luxembourg/opposite_sex
- /marriage-abroad/y/luxembourg/same_sex

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_opposite_sex.erb
@@ -1,71 +1,58 @@
-Contact the relevant local authorities in Luxembourg to find out about local marriage laws, including what documents you’ll need.
+## Before you start
 
-^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
+You can either get married or have a civil partnership ('pacte civil de solidarité' or PACS).
 
-##What you need to do
+Contact the [local town hall ('commune')](http://www.guichet.public.lu/citoyens/fr/support/communes/liste/index.php) to find out about local laws, including what documents you'll need.
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+^Check the [travel advice for Luxembourg](/foreign-travel-advice/luxembourg) and get [legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
-To get a CNI, you must post notice of your intended marriage in Luxembourg. You can do this at the British embassy or in front of a notary public.
+## Prove you're free to get married
 
-You’ll need to have been living in Luxembourg for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
+You need to go to the embassy in Luxembourg to confirm that you're legally allowed to get married or have a civil partnership. This is called swearing an affirmation or affidavit. If your partner is also British, they'll need to swear their own affirmation.
 
-[Make an appointment at the embassy in Luxembourg.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-luxembourg/notice-of-marriage-or-civil-partnership/slot_picker)
+This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay by card or with the exact amount of cash in [euros](/government/publications/luxembourg-consular-fees).
 
-You’ll need to provide supporting documents, including:
+### Swearing an affirmation or affidavit
+
+s1. [Make an appointment at the embassy in Luxembourg](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-luxembourg/notice-of-marriage-or-civil-partnership/slot_picker) to swear your affirmation or affidavit.
+s2. Download the [affirmation or affidavit](/government/publications/luxembourg-affirmationaffidavit-of-marital-status-forms).
+s3. Print it out but don't sign it - you need to sign it at the embassy.
+
+You also need to take:
 
 - your passport
-- proof of residence, such as a residence certificate - check with the embassy or notary public to find out what you need
-- equivalent documents for your partner
+- evidence if you've changed your name by deed poll
+- proof of your address, your 'Certificat de Résidence', a bank statement or utility bill if you live in Luxembourg
+- a boarding pass, hotel receipt or other travel documentation to show that you've been in the country for 3 full days, if you don't live in Luxembourg
 
-You’ll need to complete a [‘Notice of marriage’](/government/publications/notice-of-marriage-form--2) form and an [‘Affidavit for marriage’](/government/publications/affirmationaffidavit-of-marital-status-form) form.
+### If you've been in a marriage or civil partnership before
 
-You can download and fill in (but not sign) the forms in advance.
+You'll need to take one of the following documents:
 
-You must take the forms with you to your appointment.
+- original [decree absolute or final order](/copy-decree-absolute-final-order) (this might be a PDF certified in the country where you got divorced)
+- annulment certificate
+- civil partnership dissolution
+- partner's [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate
 
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+You can provide copies of a decree or death certificate instead of originals. They'll need to be certified by a notary public or solicitor in the country where the divorce took place or the death was registered.
 
-^Your partner will need to follow the same process and pay the fees to get their own CNI.^
+^If your divorce, civil partnership dissolution or annulment took place outside the UK, you'll need evidence that you or your former partner lived in or were a national of that country at the time.^
 
-If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
+## Get married or enter into a PACS
 
-- a [decree absolute or final order](/copy-decree-absolute-final-order)
-- a civil partnership dissolution or annulment certificate
-- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate/)
+Take your affirmation or affidavit to the town hall to be checked. They'll give you a date for the ceremony.
 
-^You’ll also need to provide evidence of nationality or residence if the divorce or dissolution took place outside the UK. You’ll need to get it [legalised](/get-document-legalised) and [translated](/government/collections/lists-of-translators-and-interpreters) if it’s not in English.^
+## After you get married
 
-###What happens next
+You don't need to register your marriage in the UK. It should be recognised in the UK if:
 
-The embassy or notary public will charge a fee for taking the oath.
+- you followed the correct process according to the law in France
+- it would be [allowed under UK law](/marriages-civil-partnerships)
 
-If you give notice at a notary public, you must post the signed forms and any supporting documents to your nearest British embassy or consulate afterwards.
+## After you enter into a PACS
 
-^The embassy or consulate may charge a fee to return your documents to you.^
+Civil partnerships are only recognised in the UK if they're between same-sex couples.
 
-The consulate will display your notice of marriage publicly for 7 days.
+If your partner isn't British, they can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they've lived in the UK for 3 years.
 
-They’ll then send all of your documentation to the British embassy or consulate nearest to where you’re getting married in Luxembourg, who will issue your CNI (as long as nobody has registered an objection).
-
-There’s an additional fee for this - the embassy or consulate will contact you to arrange payment.
-
-You should check if your CNI needs to be legalised (certified as genuine) by the local authorities in Luxembourg.
-
-^You don't need to stay in the country while your notice is posted.^
-
-## Fees
-
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-    collection: calculator.services,
-    as: :service,
-    locals: { calculator: calculator } %>
-
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Luxembourg](/government/publications/luxembourg-consular-fees).
-
-<%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
-
-*[CNI]:certificate of no impediment
-
-
-
+*[PACS]: pacte civil de solidarité
