--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_other/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_other/_same_sex.erb
@@ -1,25 +1,6 @@
 You may be able to register a civil partnership at the British embassy or consulate in Moldova.
 
-Contact them to make an appointment:
-
-$A
-British Embassy Chisinau
-18 Nicolae Iorga Str.
-Chisinau
-MD-2012
-Moldova
-$A
-
-$C
-Telephone: (+373) (22) 225 902
-Fax: (+373) (22) 251 859
-Telephone: Consular section: (+373) (22) 225 902
-Email: Consular.Chisinau@fco.gov.uk
-
-Email: <Enquiries.Chisinau@fco.gov.uk>
-
-[British Embassy Chisinau - opening hours](https://www.gov.uk/world/organisations/british-embassy-chisinau/office/british-embassy)
-$C
+[Make an appointment at the embassy in Chisinau](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-chisinau/notice-of-marriage-or-civil-partnership/slot_picker).
 
 ##What documents you’ll need
 
