--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
@@ -3,8 +3,12 @@
 <% end %>
 
 <% options(
-  "yes": "Yes",
-  "no": "No"
+  "bereavement_benefits": "Bereavement benefits",
+  "severe_disablement_allowance": "Severe Disablement Allowance",
+  "employment_and_support_allowance": "Employment and Support Allowance",
+  "incapacity_benefit": "Incapacity Benefit",
+  "industrial_injuries_disablement_benefit": "Industrial Injuries Disablement Benefit",
+  "state_pension": "State Pension"
 ) %>
 
 <% content_for :body do %>
