Question 13: Content update
This commit replaces the list of benefits with the text [1] and also
changing the wrapping tag to a hint.

These changes have been requested via this document [2] by the content
design team.

[1] "If you do not receive any of these click 'Next step'."
[2] https://docs.google.com/document/d/1L7iCySnGFcTxTM8iyDJuYYRwSFT7nbNmwAOIgbZ5CZ0/edit#

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
@@ -2,6 +2,11 @@
   Does the following apply to you?
 <% end %>
 
+<% content_for :hint do %>
+  If you do not receive any of these click 'Next step'.
+
+<% end %>
+
 <% options(
   "bereavement_benefits": "Bereavement benefits",
   "severe_disablement_allowance": "Severe Disablement Allowance",
@@ -10,15 +15,3 @@
   "industrial_injuries_disablement_benefit": "Industrial Injuries Disablement Benefit",
   "state_pension": "State Pension"
 ) %>
-
-<% content_for :body do %>
-  You're currently receiving at least one of the following UK benefits:
-
-  - Bereavement benefits
-  - Severe Disablement Allowance
-  - Employment and Support Allowance
-  - Incapacity Benefit
-  - Industrial Injuries Disablement Benefit
-  - State Pension
-
-<% end %>
