--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_any_of_the_following_apply.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_any_of_the_following_apply.govspeak.erb
@@ -1,5 +1,10 @@
 <% content_for :title do %>
-  Are you one of the following:
+  Do any of the following apply to you?
+<% end %>
+
+<% content_for :body do %>
+  If none apply, click ‘Next Step’.
+
 <% end %>
 
 <% options(
@@ -7,10 +12,3 @@
   "full_time_secondary_education": "I'm age 16 to 19 and in full-time secondary education",
   "appealing_against_decision": "I'm appealing against a decision about your ability to work"
 ) %>
-
-<% content_for :body do %>
-  - affected by a trades dispute (eg on strike)
-  - age 16 to 19 and in full-time secondary education
-  - appealing against a decision about your ability to work
-
-<% end %>
