--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
@@ -9,7 +9,7 @@
 
   You won’t be able to inherit any of their State Pension if you remarry or form a new civil partnership before State Pension age.
 
-  ##Your spouse or civil partner reached State Pension age before 6 April 2016
+  ###Your spouse or civil partner reached State Pension age before 6 April 2016
 
   You may be able to inherit a portion of their [Additional State Pension](/additional-state-pension/further-information) and [State Pension top up](/state-pension-top-up). You may also be able to inherit half their Graduated Retirement Benefit. This was the earnings-related State Pension people could build up between 1961 and 1975.
 
@@ -17,7 +17,7 @@
 
   You may also be able to inherit a portion of your spouse or civil partner’s deferral payment if they had [deferred claiming their State Pension](/deferring-state-pension/tax-and-inheritance) - the date of your marriage or civil partnership doesn't affect this.
 
-  ##Your spouse or civil partner reached or is due to reach State Pension age on or after 6 April 2016
+  ###Your spouse or civil partner reached or is due to reach State Pension age on or after 6 April 2016
 
   You may be able to inherit half of their [Protected Payment](/new-state-pension/inheriting-or-increasing-state-pension-from-a-spouse-or-civil-partner).
 
@@ -25,9 +25,7 @@
 
   ###Other benefits you might get
 
- You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age and your partner died on or after 6 April 2017.
-
-If your spouse or civil partner died before 6 April 2017, you may be eligible for [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
+ You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if your partner dies on or after 6 April 2017.
 
   ##If you get divorced or your civil partnership is dissolved
 
