--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_no_state_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_no_state_pension_outcome.govspeak.erb
@@ -63,9 +63,7 @@
 
   ###Other benefits you might get
 
-  You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age and your partner died on or after 6 April 2017.
-
-  If your spouse or civil partner died before 6 April 2017, you may be eligible for [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
+  You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if your partner dies before you reach State Pension age.
 
   ##If you get divorced or your civil partnership is dissolved
 
