Fixed 'Other benefits you might get' (married man)
Fixed dates under 'Other benefits you might get'.

--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
@@ -25,7 +25,7 @@
 
   ###Other benefits you might get
 
- You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if your partner dies on or after 6 April 2017.
+ You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if your partner dies before you reach State Pension age.
 
   ##If you get divorced or your civil partnership is dissolved
 
