Question 33: Content update
This commit replaces the list of partner premium with the text [1] and
also changing the wrapping tag to a hint.

The question title has also changes as instructed in [2].

These changes have been requested via this document [2] by the content
design team.

[1] "Your partner must be getting the premium, not you." and "If no 'Next step'."
[2] https://docs.google.com/document/d/1L7iCySnGFcTxTM8iyDJuYYRwSFT7nbNmwAOIgbZ5CZ0/edit#

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
@@ -1,5 +1,13 @@
 <% content_for :title do %>
-  Are you travelling abroad with a partner who is getting Income Support with one of the following:
+  Are you travelling abroad with a partner who is getting Income Support with one of the following <a href='/income-support/what-youll-get'>premiums</a>?
+<% end %>
+
+<% content_for :body do %>
+  Your partner must be getting the premium, not you.
+<% end %>
+
+<% content_for :hint do %>
+  If no, click ‘Next Step’.
 <% end %>
 
 <% options(
@@ -8,15 +16,3 @@
   "disability_premium": "Disability premium",
   "severe_disability_premium": "Severe Disability premium"
 ) %>
-
-<% content_for :hint do %>
-  Your partner must be getting the premium, not you.
-<% end %>
-
-<% content_for :body do %>
-  - [Pensioner premium](/income-support/what-youll-get)
-  - [Higher Pensioner premium](/income-support/what-youll-get)
-  - [Disability premium](/disability-premiums-income-support/eligibility)
-  - [Severe Disability premium](/disability-premiums-income-support/eligibility)
-
-<% end %>
