--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
@@ -3,8 +3,8 @@
 <% end %>
 
 <% options(
-  "yes": "Yes",
-  "no": "No"
+  "too_ill_to_work": "I’m getting Statutory Sick Pay",
+  "temporarily_incapable_of_work": "I’m incapable of work, but being treated as capable of work because I’m temporarily disqualified from receiving Income Support"
 ) %>
 
 <% content_for :body do %>
