Question 34: Content update
This commit replaces the list of impairments with the text [1] and
also changing the wrapping tag to a hint.

The question title has also changes as instructed in [2].

These changes have been requested via this document [2] by the content
design team.

[1] "If neither apply, click 'Next Step'"
[2] https://docs.google.com/document/d/1L7iCySnGFcTxTM8iyDJuYYRwSFT7nbNmwAOIgbZ5CZ0/edit#

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
@@ -1,14 +1,13 @@
 <% content_for :title do %>
-  Are you getting Income Support while either:
+  Which of these applies to you?
+<% end %>
+
+<% content_for :hint do %>
+  If neither apply, click 'Next Step'.
+
 <% end %>
 
 <% options(
   "too_ill_to_work": "I’m getting Statutory Sick Pay",
   "temporarily_incapable_of_work": "I’m incapable of work, but being treated as capable of work because I’m temporarily disqualified from receiving Income Support"
 ) %>
-
-<% content_for :body do %>
-  - getting [Statutory Sick Pay](/statutory-sick-pay/)
-  - incapable of work, but being treated as capable of work because you are temporarily disqualified from receiving Income Support
-
-<% end %>
