Question 36: Content update
This commit replaces the list of impairment periods with the text [1] and
also changing the wrapping tag to a hint.

The question title has also changes as instructed in [2].

These changes have been requested via this document [2] by the content
design team.

[1] "If you don’t receive either of these click 'Next step'."
[2] https://docs.google.com/document/d/1L7iCySnGFcTxTM8iyDJuYYRwSFT7nbNmwAOIgbZ5CZ0/edit#

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_work_or_sick_pay.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_work_or_sick_pay.govspeak.erb
@@ -1,14 +1,13 @@
 <% content_for :title do %>
-  Have you been unable to work or received Statutory Sick Pay for one of the following:
+  Have you been unable to work or received Statutory Sick Pay for one of the following?
+<% end %>
+
+<% content_for :hint do %>
+  If you don’t receive either of these click 'Next step'.
+
 <% end %>
 
 <% options(
   "364_days": "364 days",
   "196_days": "196 days if you're terminally ill, or getting the highest rate of Disability Living Allowance (care component) or the enhanced rate of Personal Independence Payment (daily living component)"
 ) %>
-
-<% content_for :body do %>
-  - 364 days
-  - 196 days if you're terminally ill, or getting the highest rate of Disability Living Allowance (care component) or the enhanced rate of Personal Independence Payment (daily living component)
-
-<% end %>
