--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
@@ -3,8 +3,13 @@
 <% end %>
 
 <% options(
-  "yes": "Yes",
-  "no": "No"
+  "state_pension": "State Pension",
+  "incapacity_benefit": "Incapacity Benefit",
+  "widows_benefit": "Widow’s Benefit",
+  "bereavement_benefit": "Bereavement Benefit",
+  "industrial_injuries_disablement_benefit": "Industrial Injuries Disablement Benefit",
+  "contribution_based_employment_support_allowance": "contribution-based Employment and Support Allowance",
+  "severe_disablement_allowance": "Severe Disablement Allowance"
 ) %>
 
 <% content_for :body do %>
