Question 20: Content update
This commit replaces the list of tax credit benefits with the text [1]
and also changing the wrapping tag to a hint.

The question title has also changes as instructed in [2].

These changes have been requested via this document [2] by the content
design team.

[1] "If you don’t receive any of these click 'Next step'."
[2] https://docs.google.com/document/d/1L7iCySnGFcTxTM8iyDJuYYRwSFT7nbNmwAOIgbZ5CZ0/edit#

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
@@ -1,5 +1,10 @@
 <% content_for :title do %>
-  Are you currently claiming State Pension or any of the following benefits?
+  Are you currently claiming any of the following?
+<% end %>
+
+<% content_for :hint do %>
+  If you don’t receive any of these click 'Next step'.
+
 <% end %>
 
 <% options(
@@ -11,13 +16,3 @@
   "contribution_based_employment_support_allowance": "contribution-based Employment and Support Allowance",
   "severe_disablement_allowance": "Severe Disablement Allowance"
 ) %>
-
-<% content_for :body do %>
-  - Incapacity Benefit
-  - Widow's Benefit
-  - Bereavement Benefit
-  - Industrial Injuries Disablement Benefit
-  - contribution-based Employment and Support Allowance
-  - Severe Disablement Allowance
-
-<% end %>
