--- a/lib/smart_answer_flows/calculate-your-child-maintenance/questions/gets_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-child-maintenance/questions/gets_benefits.govspeak.erb
@@ -6,6 +6,10 @@
   <% end %>
 <% end %>
 
+<% content_for :hint do %>
+  If you do not receive any of these click 'Next step'.
+<% end %>
+
 <% options(
   "income_support": "Income Support",
   "ib_jobseekers_allowance": "income-based Jobseeker’s Allowance",
@@ -29,30 +33,3 @@
   "skillseekers_training": "Skillseekers training",
   "war_partner_pension": "War Widow’s, Widower’s or Surviving Civil Partner’s Pension"
 ) %>
-
-<% content_for :hint do %>
-  In Scotland, this also includes: Skillseekers training, War Widow’s, Widower’s or Surviving Civil Partner’s Pension
-<% end %>
-
-<% content_for :body do %>
-  - Income Support
-  - income-based Jobseeker’s Allowance
-  - income-related Employment and Support Allowance
-  - Pension Credit
-  - contribution-based Jobseeker’s Allowance
-  - contribution-based Employment and Support Allowance
-  - State Pension
-  - Incapacity Benefit
-  - Training Allowance
-  - Armed Forces Compensation Scheme payments
-  - War Disablement Pension
-  - Bereavement Allowance
-  - Carer’s Allowance
-  - Maternity Allowance
-  - Severe Disablement Allowance
-  - Industrial Injuries Disablement Benefit
-  - Widowed Parent’s Allowance
-  - Widow’s pension
-  - Universal Credit with no earned income
-
-<% end %>
