Preparatory: Changes exempt benefits to Key/Value Pair
Im preparation for the accessibility changes, this commit updates the
exempt benefits defined in the benefit_cap_data yaml file, by adding
matching keys to the existing benefit list.

This will help reduce the changes that are required to improve this
smart answer's accessibility.

The flow and tests have been updated, the tests further validate the
content of the exempt benefits.

No regression test artefacts have been affected by these changes

--- a/lib/smart_answer_flows/benefit-cap-calculator/questions/receiving_exemption_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/questions/receiving_exemption_benefits.govspeak.erb
@@ -8,7 +8,7 @@
 ) %>
 
 <% content_for :body do %>
-  <% exempt_benefits.each do |exempt_benefit| %>
+  <% exempt_benefits_descriptions.each do |exempt_benefit| %>
      - <%= exempt_benefit %>
   <% end %>
 <% end %>
