--- a/lib/smart_answer_flows/benefit-cap-calculator/questions/receiving_exemption_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/questions/receiving_exemption_benefits.govspeak.erb
@@ -2,10 +2,8 @@
   Do you or someone in your household get any of the following benefits?
 <% end %>
 
-<% options(exempt_benefits) %>
-
-<% content_for :body do %>
-  <% exempt_benefits_descriptions.each do |exempt_benefit| %>
-     - <%= exempt_benefit %>
-  <% end %>
+<% content_for :hint do %>
+  If you do not receive any of these click 'Next step'.
 <% end %>
+
+<% options(exempt_benefits) %>
