--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/do_either_of_the_following_apply.govspeak.erb
@@ -7,11 +7,4 @@
 
 <% end %>
 
-<% options(
-  "bereavement_benefits": "Bereavement benefits",
-  "severe_disablement_allowance": "Severe Disablement Allowance",
-  "employment_and_support_allowance": "Employment and Support Allowance",
-  "incapacity_benefit": "Incapacity Benefit",
-  "industrial_injuries_disablement_benefit": "Industrial Injuries Disablement Benefit",
-  "state_pension": "State Pension"
-) %>
+<% options(calculator.state_benefits) %>
