--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_any_of_the_following_apply.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_any_of_the_following_apply.govspeak.erb
@@ -7,8 +7,4 @@
 
 <% end %>
 
-<% options(
-  "trades_dispute": "I'm affected by a trades dispute (eg on strike)",
-  "full_time_secondary_education": "I'm age 16 to 19 and in full-time secondary education",
-  "appealing_against_decision": "I'm appealing against a decision about your ability to work"
-) %>
+<% options(calculator.all_dispute_criteria) %>
