DRYUP: Update premiums
This commit updates the premiums list. It defines it as a
constant on the calculator and reuses it in the flow and template.

This makes it easy for the premiums to be defined as the option
in question 33.

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
@@ -10,9 +10,4 @@
   If no, click ‘Next Step’.
 <% end %>
 
-<% options(
-  "pension_premium": "Pensioner premium",
-  "higher_pensioner": "Higher Pensioner premium",
-  "disability_premium": "Disability premium",
-  "severe_disability_premium": "Severe Disability premium"
-) %>
+<% options(calculator.premiums) %>
