DRYUP: Update impairments
This commit updates the impairments list. It defines it as a
constant on the calculator and reuses it in the flow and template.

This makes it easy for the impairments to be defined as the option
in question 34.

--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_either_of_the_following.govspeak.erb
@@ -7,7 +7,4 @@
 
 <% end %>
 
-<% options(
-  "too_ill_to_work": "I’m getting Statutory Sick Pay",
-  "temporarily_incapable_of_work": "I’m incapable of work, but being treated as capable of work because I’m temporarily disqualified from receiving Income Support"
-) %>
+<% options(calculator.impairments) %>
