--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/tax_credits_currently_claiming.govspeak.erb
@@ -7,12 +7,4 @@
 
 <% end %>
 
-<% options(
-  "state_pension": "State Pension",
-  "incapacity_benefit": "Incapacity Benefit",
-  "widows_benefit": "Widow’s Benefit",
-  "bereavement_benefit": "Bereavement Benefit",
-  "industrial_injuries_disablement_benefit": "Industrial Injuries Disablement Benefit",
-  "contribution_based_employment_support_allowance": "contribution-based Employment and Support Allowance",
-  "severe_disablement_allowance": "Severe Disablement Allowance"
-) %>
+<% options(calculator.tax_credits_benefits) %>
