--- a/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/uk-benefits-abroad/questions/is_claiming_benefits.govspeak.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %>
-  Are you travelling abroad with a partner who is getting Income Support with one of the following <a href='/income-support/what-youll-get'>premiums</a>?
+  Are you travelling abroad with a partner who is getting Income Support with one of the following premiums ?
 <% end %>
 
 <% content_for :body do %>
-  Your partner must be getting the premium, not you.
+  Your partner must be getting the <a href='/income-support/what-youll-get'>premium</a>, not you.
 <% end %>
 
 <% content_for :hint do %>
