--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/third_country/partner_other/_opposite_sex.govspeak.erb
@@ -4,10 +4,24 @@ Contact the relevant local authorities in Denmark to find out about local marria
 
 ##What you need to do
 
-You need to apply for either:
+You should apply for a ‘no trace letter’ from the General Register Office, National Records of Scotland or nidirect.
 
-- a certificate of no impediment (CNI) from the British Embassy or UK registrar
-- a ‘no trace letter’ from the General Register Office
+If you can’t apply for a ‘no trace letter’ you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
+
+###No trace letters
+
+The Danish authorities will accept a ‘no trace letter’. It can take up to 3 weeks for a ‘no trace letter’ to be issued.
+
+If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. Ask them to make a search and quote reference ‘SEARCH 123’.
+
+$C
+**General Register Office**\\
+Telephone: +44 (0)300 123 1837 (8am to 8pm Monday to Friday and 9am to 4pm Saturday)
+$C
+
+If you are in Scotland, you can get a ’to whom it may concern’ letter from the [National Records of Scotland](https://www.nrscotland.gov.uk/registration/getting-married-abroad/what-documents-will-i-need-to-provide).
+
+If you are in Northern Ireland, you can get a ‘certificate of legal capacity to marry' or a ‘marriage index search’ from [nidirect](https://www.nidirect.gov.uk/articles/marriage-outside-uk).
 
 ###Certificate of no impediment (CNI)
 
@@ -17,17 +31,6 @@ There are 2 ways you can get a CNI:
 - [go to Denmark and post notice at the embassy or consulate there](/marriage-abroad/y/denmark/ceremony_country/partner_other/opposite_sex)
 
 %If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
-
-###No trace letters
-
-The Danish authorities will sometimes accept a ‘no trace letter’ instead of a CNI. Check with the Danish authorities to find out if they’ll accept a ‘no trace letter’.
-
-You can get a ‘no trace letter’ from the General Register Office. Ask them to make a search and quote reference ‘SEARCH 123’.
-
-$C
-**General Register Office**\\
-Telephone: +44 (0)300 123 1837 (8am to 8pm Monday to Friday and 9am to 4pm Saturday)
-$C
 
 ##Naturalisation of your partner if they move to the UK
 
