Accommodate title with debug div wrapper
Following the previous commit where the debug div wraps each partial
template.

As a result, content_for title produced a wrapping h2 tag that wrapped
the debug div. This breaks the presentation of any title with a partial

Here the solution has been to extract the title and path and present
them with matching debug div wrap where required.

--- a/app/views/smart_answers/question.html.erb
+++ b/app/views/smart_answers/question.html.erb
@@ -13,9 +13,14 @@
     <div class="current-question" id="current-question">
 
       <div class="question" data-debug-template-path="<%= question.relative_erb_template_path %>">
-        <h2 data-test="question">
-          <%= question.title %>
-        </h2>
+        <% if question.wrapped_with_debug_div? %>
+          <div data-debug-template-path="<%= question.partial_template_path %>">
+            <h2 data-test="question"><%= question.title %></h2>
+          </div>
+        <% else %>
+          <h2 data-test="question"><%= question.title %></h2>
+        <% end %>
+
         <div class="question-body">
           <% if question.body.present? %>
             <article role="article">
