--- a/app/views/layouts/smart_answers.html.erb
+++ b/app/views/layouts/smart_answers.html.erb
@@ -16,7 +16,7 @@
       locals: {
         message: <<-MESSAGE
         This is a test version of the layout of this page.
-        <a id='taxonomy-survey' href='https://www.smartsurvey.co.uk/s/betasurvey2017' target='_blank' rel='noopener noreferrer'>
+        <a id='taxonomy-survey' href='https://www.smartsurvey.co.uk/s/betasurvey2017?c=#{current_path_without_query_string}' target='_blank' rel='noopener noreferrer'>
           Take the survey to help us improve it
         </a>
         MESSAGE
