--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_british/_opposite_sex.erb
@@ -12,7 +12,9 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 ###Legalisation and translation
 
-You might need to exchange your UK-issued CNI for one that’s valid in Algeria at the nearest embassy or consulate to where you’re getting married.
+You’ll need to exchange your UK-issued CNI for one that’s valid in Algeria at the nearest British embassy to where you’re getting married.
+
+[Make an appointment at the British Embassy in Algiers](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-algeria/exchange-a-certificate-of-no-impediment/slot_picker).
 
 You should also check if it needs to be:
 
