Create one outcome per path for Cambodia
- Create a title template
- Add outcomes templates
- Add Cambodia to 18 countries list
- Add tests
- Remove old Cambodia entries
- Update checksums

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
@@ -45,11 +45,7 @@
 
   <% end %>
 
-  <% if calculator.ceremony_country == 'cambodia' %>
-    ##What documents you’ll need
-
-    You’ll both need to bring proof that you’ve been resident in Cambodia for the last 7 days.
-  <% elsif calculator.ceremony_country == 'australia' %>
+  <% if calculator.ceremony_country == 'australia' %>
     ##What documents you’ll need
 
     The consular officer will talk to you about the documents you need when they confirm your appointment to give notice. 
