--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb
@@ -10,15 +10,13 @@ Contact the [Embassy of Denmark](/government/publications/foreign-embassies-in-t
 
 ##What you need to do
 
-You should apply for a ‘no trace letter’ from the General Register Office, National Records of Scotland or nidirect.
+You should apply for a document showing that you’re free to marry from the General Register Office, National Records of Scotland or nidirect.
 
 If you can’t apply for a ‘no trace letter’ you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
 
-###No trace letters
+###Document showing that you’re free to marry
 
-The Danish authorities will accept a ‘no trace letter’. It can take up to 3 weeks for a ‘no trace letter’ to be issued.
-
-If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. Ask them to make a search and quote reference ‘SEARCH 123’.
+If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. It can take up to 3 weeks for a ‘no trace letter’ to be issued. Ask them to make a search and quote reference ‘SEARCH 123’.
 
 $C
 **General Register Office**\\
