--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_opposite_sex.govspeak.erb
@@ -10,7 +10,7 @@ If you can’t apply for a ‘no trace letter’ you can get a certificate of no
 
 ###Document showing that you’re free to marry
 
-If you are from England or Wales, you can get a ‘no trace letter’ from the General Register Office. It can take up to 3 weeks for a ‘no trace letter’ to be issued. Ask them to make a search and quote reference ‘SEARCH 123’.
+If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. It can take up to 3 weeks for a ‘no trace letter’ to be issued. Ask them to make a search and quote reference ‘SEARCH 123’.
 
 $C
 **General Register Office**\\
