--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_opposite_sex.govspeak.erb
@@ -6,7 +6,7 @@ Contact the relevant local authorities in Denmark to find out about local marria
 
 You should apply for a document showing that you’re free to marry from the General Register Office, National Records of Scotland or nidirect.
 
-If you can’t apply for a ‘no trace letter’ you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
+If you can’t apply for one of these documents you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
 
 ###Document showing that you’re free to marry
 
