--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
@@ -12,7 +12,7 @@ Contact the [Embassy of Denmark](/government/publications/foreign-embassies-in-t
 
 You should apply for a document showing that you’re free to marry from the General Register Office, National Records of Scotland or nidirect.
 
-If you can’t apply for a ‘no trace letter’ you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
+If you can’t apply for one of these documents you can get a certificate of no impediment (CNI) from the British Embassy or UK registrar.
 
 ###Document showing that you’re free to marry
 
