Luxembourg Content update
This content update changes the country from France to Luxembourg and
enumerates the possible card companies that are accepted for payments.

Checksum and regression test artefacts have been updated.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_opposite_sex.erb
@@ -10,7 +10,7 @@ Contact the [local town hall ('commune')](http://www.guichet.public.lu/citoyens/
 
 You need to go to the embassy in Luxembourg to confirm that you're legally allowed to get married or have a civil partnership. This is called swearing an affirmation or affidavit. If your partner is also British, they'll need to swear their own affirmation.
 
-This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay by card or with the exact amount of cash in [euros](/government/publications/luxembourg-consular-fees).
+This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay by card (Mastercard or Visa) or with the exact amount of cash in [euros](/government/publications/luxembourg-consular-fees).
 
 ### Swearing an affirmation or affidavit
 
@@ -46,7 +46,7 @@ Take your affirmation or affidavit to the town hall to be checked. They'll give 
 
 You don't need to register your marriage in the UK. It should be recognised in the UK if:
 
-- you followed the correct process according to the law in France
+- you followed the correct process according to the law in Luxembourg
 - it would be [allowed under UK law](/marriages-civil-partnerships)
 
 ## After you enter into a PACS
