Display an alert on heroku deployments
We want to avoid the general public being confused about the
information in the Smart Answers preview apps on Heroku.

We are then displaying a big alert banner on top of each page of heroku
deployments, to make very clear that the information shouldn't be
relied upon, and the user should instead refer to gov.uk for the
official information.

--- a/app/assets/stylesheets/smart_answers.scss
+++ b/app/assets/stylesheets/smart_answers.scss
@@ -376,3 +376,18 @@ $is-ie: false !default;
   }
 
 }
+
+//Heroku alert
+.heroku-alert {
+    margin: 0 15px 15px 15px;
+    border: 1px solid #B01117;
+    background-color: #B01117;
+    color: #FFF;
+    padding: 1em;
+    font-weight: bold;
+
+    a {
+      cursor: pointer;
+      color: #FFF3CF;
+    }
+}
