--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_local/_opposite_sex.erb
@@ -6,16 +6,18 @@ Contact the relevant local authorities in El Salvador to find out about local ma
 
 You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
 
-To get a CNI, you must post notice of your intended marriage in El Salvador. You can do this at the British embassy or in front of a notary public.
+To get a CNI, you must post notice of your intended marriage in El Salvador. You can do this at the British Honorary Consulate or in front of a notary public.
 
 You’ll need to have been living in El Salvador for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
-[Make an appointment at the embassy in San Salvador.](https://www.consular-appointments.service.gov.uk/fco#!/british-embassy-san-salvador/notice-of-marriage-or-civil-partnership/slot_picker)
+[Email the British Honorary Consulate in San Salvador](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) to request an appointment. The Honorary Consul’s office will confirm your appointment within 24 hours.
+
+[Email the Honorary Consul](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) if you need to cancel or change your appointment.
 
 You’ll need to provide supporting documents, including:
 
 - your passport
-- proof of residence, such as a residence certificate - check with the embassy to find out what you need
+- proof of residence, such as a residence certificate - check with the Honorary Consulate to find out what you need
 - equivalent documents for your partner
 
 You’ll need to complete a [‘Notice of marriage’](/government/publications/notice-of-marriage-form--2) form and an [‘Affidavit for marriage’](/government/publications/affirmationaffidavit-of-marital-status-form) form.
@@ -36,7 +38,7 @@ If you or your partner have been divorced, widowed or previously in a civil part
 
 ###What happens next
 
-The embassy will charge a fee for taking the oath, and then display your notice of marriage publicly for a further 7 days. They’ll then issue the CNI, as long as nobody has registered an objection. There’s an additional fee for this.
+The Honorary Consulate will charge a fee for taking the oath, and then display your notice of marriage publicly for a further 7 days. They’ll then issue the CNI, as long as nobody has registered an objection. There’s an additional fee for this.
 
 You should check if your CNI needs to be legalised (certified as genuine) by the local authorities in El Salvador.
 
@@ -51,7 +53,7 @@ You should check if your CNI needs to be legalised (certified as genuine) by the
     as: :service,
     locals: { calculator: calculator } %>
 
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for El Salvador](/government/publications/el-salvador-consular-fees).
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for El Salvador](/government/publications/consular-fees-el-salvador).
 
 You can pay by cash or credit card, but not by personal cheque.
 
