El Salvador - user UK - partner British - opposite sex
Changed references to the British Embassy to the Honorary Consulate.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_british/_opposite_sex.erb
@@ -1,4 +1,4 @@
-Contact the [Embassy of El Salvador](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+Contact the [British Honorary Consulate in San Salvador](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for El Salvador](/foreign-travel-advice/el-salvador) before making any plans.
 
@@ -13,6 +13,10 @@ You can normally get a CNI by giving a notice of marriage at your local register
 ###Legalisation and translation
 
 You might need to exchange your UK-issued CNI for one that’s valid in El Salvador at the nearest embassy or consulate to where you’re getting married.
+
+[Email the British Honorary Consulate in San Salvador](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) to request an appointment. The Honorary Consul’s office will confirm your appointment within 24 hours.
+
+[Email the Honorary Consul](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) if you need to cancel or change your appointment.
 
 You should also check if it needs to be:
 
