El Salvador - user UK - partner local - opposite sex
CHANGE 1
Changed references to the British Embassy to the Honorary Consulate.

CHANGE 2
Added information about naturalisation of partner.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_local/_opposite_sex.erb
@@ -1,4 +1,4 @@
-Contact the [Embassy of El Salvador](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+Contact the [British Honorary Consulate in San Salvador](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for El Salvador](/foreign-travel-advice/el-salvador) before making any plans.
 
@@ -14,6 +14,10 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 You might need to exchange your UK-issued CNI for one that’s valid in El Salvador at the nearest embassy or consulate to where you’re getting married.
 
+[Email the British Honorary Consulate in San Salvador](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) to request an appointment. The Honorary Consul’s office will confirm your appointment within 24 hours.
+
+[Email the Honorary Consul](mailto:George.Chippendale-HonCon@fconet.fco.gov.uk) if you need to cancel or change your appointment.
+
 You should also check if it needs to be:
 
 - ‘[legalised](/get-document-legalised)’ (certified as genuine)
@@ -24,5 +28,9 @@ You should also check with the local authorities in El Salvador to find out if y
 %The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
 <%= render partial: 'partner_naturalisation_in_uk' %>
+
+##Naturalisation of your partner if they move to the UK
+
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
 *[CNI]:certificate of no impediment
