Greece - user Greece - opposite sex
Updated to fix small typo

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/_opposite_sex.govspeak.erb
@@ -47,7 +47,7 @@ You might also be asked to get your document [legalised](/get-document-legalised
 
 The British embassy or vice consulate will display your notice of marriage publicly for 7 full days. This means if you give notice on Monday, it will be displayed until the following Tuesday. 
 
-If nobody registers an objection, your CNI should be ready to collect from the embassy in Athens within 2 weeks of giving your notice. You can also pay to sent to you by post or courier.
+If nobody registers an objection, your CNI should be ready to collect from the embassy in Athens within 2 weeks of giving your notice. You can also pay to have it sent to you by post or courier.
 
 You don’t need to stay in the country while your notice is displayed.
 
